<resources>
    <string name="app_name">TestTaskForYandex</string>
    <string name="choose_lang_title">Выбор языка</string>
    <string name="query_hint">Нажмите, чтобы ввести текст</string>
    <string name="edittext_hint">Вводите текст</string>
    <string name="menu_title">История/Избранное</string>
    <string name="translate_text">ПЕРЕВЕСТИ</string>
    <string name="result_hint">Здесь будет результат</string>
    <string name="no_internet">Не получилось подключиться к серверу. Проверьте ваше подключение к сети&#8230;</string>
    <string name="before_textview">Ранее</string>

    <!--Items for bottom menu -->
    <string name="translation_item">Перевод</string>
    <string name="history_and_favorites_item">История/Избранное</string>
    <string name="settings_item">Настройки</string>
    <!-- -->
    <string name="placeholder1">Переводчик</string>
    <string name="placeholder2">История и Избранное</string>
    <string name="placeholder3">Настройки</string>
    <string name="placeholder_l1">русский</string>
    <string name="placeholder_l2">английский</string>
    <string name="placeholder_tabs1">История</string>
    <string name="placeholder_tabs2">Избранное</string>
    <string name="placeholder_hist_tab">Здесь отображается история переводов</string>
    <string name="placeholder_fav_tab">Здесь отображаются избранные переводы</string>
    <!-- -->
    <string name="delete">Удалить всё</string>
    <string name="request_textbox_hint">Нажмите, чтобы ввести текст</string>
    <string name="translate_the_word">Переведите какое-нибудь слово, чтобы добавить его в избранное</string>
    <!-- Preferences Screen -->
    <string name="cache_cath">Кэш</string>
    <string name="about_cath">О программе</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_fav">Очистить избранное</string>
    <string name="about">Переводчик, использующий API Yandex</string>
    <string name="about_summary">Автор: Никита Карпунин, 2017 год</string>
    <string name="license">Лицензии</string>
    <string name="toast_clear_history">История очищена</string>
    <string name="toast_clear_favs">Избранное очищено</string>
    <string name="history_empty">История пуста</string>
    <string name="favs_empty">Избранное пусто</string>
    <!-- Preferences Constants-->
    <string name="f_lang">first_lang</string>
    <string name="s_lang">s_lang</string>
    <string name="f_lang_code">first_lang_code</string>
    <string name="s_lang_code">s_lang_code</string>

    <!-- List of Errors-->
    <string name="false_API_key">Неправильный API-ключ</string>
    <string name="blocked_API_key">API-ключ заблокирован</string>
    <string name="day_limit">Превышено суточное ограничение на объем переведенного текста</string>
    <string name="text_limit">Превышен максимально допустимый размер текста</string>
    <string name="unable_to_translate">Текст не может быть переведен</string>
    <string name="translate_is_not_supported">Заданное направление перевода не поддерживается</string>
    <!-- -->
</resources>
