<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/f_lan_button"
                style="@style/ChooseLangButton"/>
            <ImageButton
                android:id="@+id/switch_lang"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_switch_languages"
                android:background="?android:attr/selectableItemBackground"/>
            <Button
                android:id="@+id/s_lan_button"
                style="@style/ChooseLangButton"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/tools_frame"
                android:background="@color/colorWhite"
                android:elevation="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/request_textbox_hint"
                    android:layout_marginRight="56dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/textview_request"
                    android:textSize="18sp"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorDarkGrey"/>
                <ImageButton
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:id="@+id/delete_text_button"
                    android:src="@drawable/ic_delete_text"
                    android:background="?android:attr/selectableItemBackground"/>
                <ProgressBar
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:id="@+id/progressbar"
                    android:visibility="invisible"
                    android:layout_below="@+id/delete_text_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="12dp"/>
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tools_frame"
            android:layout_margin="6dp"
            android:background="@color/colorWhite"
            android:elevation="2dp">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/result_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textview_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="16sp"
                    android:text="@string/result_hint"
                    android:layout_weight="8"/>
                <ImageButton
                    android:id="@+id/button_to_fav"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_to_fav_unchecked"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/before"
                android:layout_below="@+id/result_field"
                android:text="@string/before_textview"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/before"
                android:id="@+id/recyclerview_results"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>